--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.ss">
 </head>
 <body>
+    <header class="cabecalho">
+      <div class="search-box"></div>
+      <input type="text" placeholder="Pesquisar...">
+    </header>
     <h1>
-        Vendas De Playstation
+        Vendas de Jogos
     </h1>
 </body>
 </html>
