--- a/index.html
+++ b/index.html
@@ -8,11 +8,21 @@
 </head>
 <body>
     <header class="cabecalho">
+      <img class="logo-escola" src="logo escola.jpg" alt="logo de descrição da escola"
+    <ul class="lista-cabecalho">
+        <li class="lista-item">CEJPC</li>
+        <li class="lista-item1">Colégio Estadual James Patrick Clark</li>
+      </ul>
       <div class="search-box"></div>
       <input type="text" placeholder="Pesquisar...">
+      <a class="search-btn" >
+        <img class="lupa-azul" src="./loupe-blue.svg" alt="">
+        <img class="lupa-branca" src="./loupe-white.svg" alt="">
+      </a>
     </header>
     <h1>
         Vendas de Jogos
     </h1>
-</body>
+</body>0
+
 </html>
