--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <header class="cabecalho">
-      <img class="logo-escola" src="logo escola.jpg" alt="logo de descrição da escola"
+      <img class="logo-escola" src="logo escola.jpg" alt="logo de descrição da escola">
     <ul class="lista-cabecalho">
         <li class="lista-item">CEJPC</li>
-        <li class="lista-item1">Colégio Estadual James Patrick Clark</li>
+        <li class="lista-item1">Vendas de jogos</li>
+        <li class="lista-item2">Venha comprar seus jogos</li>
       </ul>
       <div class="search-box"></div>
       <input type="text" placeholder="Pesquisar...">
