--- a/index.html
+++ b/index.html
@@ -5,25 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
+    <link rel="styleshet" href="style.css">
 </head>
 <body>
     <header class="cabecalho">
-      <img class="logo-escola" src="logo escola.jpg" alt="logo de descrição da escola">
-    <ul class="lista-cabecalho">
-        <li class="lista-item">CEJPC</li>
-        <li class="lista-item1">Vendas de jogos</li>
-        <li class="lista-item2">Venha comprar seus jogos</li>
-      </ul>
-      <div class="search-box"></div>
-      <input type="text" placeholder="Pesquisar...">
-      <a class="search-btn" >
-        <img class="lupa-azul" src="./loupe-blue.svg" alt="">
-        <img class="lupa-branca" src="./loupe-white.svg" alt="">
-      </a>
-    </header>
-    <h1>
+      <img class="cabecalho-imagem" src="download.png" alt="logo do site">
+    <h1 class="nome-da-loja">
+      <ul>
         Vendas de Jogos
-    </h1>
-</body>0
-
+      </ul>
+      <div class="search-box">
+      <input type="text" class="search-text" placeholder="Pesquisar...">
+      <a class="search-btn" >
+        <img class="lupa-azul" src="./loupe-blue.svg" alt="lupa-azul">
+        <img class="lupa-branca" src="./loupe-white.svg" alt="lupa-branca">
+      </a>
+      <li class="lista-item">CEJPC</li>
+      <li class="lista-item1"> Vendas de Jogos</li>
+      <li class="lista-item2">Venha comprar seus Jogos</li>
+    <h1>
+    </header>
+    <section class="escola">
+         <img class="imagem-jogo" src="jogo.webp" alt="imagem jogo">
+    </section>
+</body>
 </html>
